# barber-backend

./: .env.example  .env.production  .gitattributes  .gitignore  build.sh  index.html  package-lock.json  package.json  pyproject.toml  render-build.sh  render-start.sh  render.yaml
app/: __init__.py
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render-build.sh  render-start.sh  run-local.bat  run-local.ps1
backend/alembic/: env.py
backend/alembic/versions/: 20260428_0001_initial_schema.py  20260428_0002_add_barber_photo_url.py  20260428_0003_telegram_and_reminders.py  20260429_0004_discount_offers.py  20260429_0005_barber_settings_and_booking_prices.py  20260503_0006_user_profile_photo.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  barbers.py  bookings.py  discounts.py  meta.py  realtime.py  uploads.py
backend/app/core/: config.py  constants.py  database.py  enums.py  security.py
backend/app/models/: barber.py  base.py  booking.py  discount.py  user.py
backend/app/schemas/: auth.py  barber.py  booking.py  discount.py  meta.py
backend/app/services/: auth.py  barbers.py  bookings.py  discounts.py  realtime.py  reminders.py  seed.py  serializers.py  startup.py  telegram.py
mobile/: .env.example  .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/api/: client.ts
mobile/src/components/: ui.tsx
mobile/src/theme/: colors.ts
mobile/src/types/: index.ts
mobile/src/utils/: date.ts
src/: App.tsx  main.tsx  theme.ts  types.ts
src/layouts/: AdminLayout.tsx
src/lib/: api.ts  leaflet.ts  mappers.ts  media.ts  realtime.ts  session.ts
src/pages/: AdminLoginPage.tsx  AdminSettingsPage.tsx  BarberLoginPage.tsx  BarberPanelPage.tsx  BarberRegisterPage.tsx  BarbersPage.tsx  BookingsPage.tsx  CustomerBookingPage.tsx  CustomerLoginPage.tsx  CustomerRegisterPage.tsx  DashboardPage.tsx  DiscountsPage.tsx  UnifiedLoginPage.tsx
src/utils/: date.ts
(+41 files in other folders)
