[tool.poetry]
name = "barbershop-backend"
version = "0.1.0"
description = "Realtime-ready backend for admin, barber and customer flows"
readme = "README.md"
package-mode = false
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
sqlalchemy = ">=2.0.35"
asyncpg = ">=0.29.0"
alembic = ">=1.13.2"
pydantic-settings = ">=2.5.2"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.9"
httpx = ">=0.27.2"

[tool.alembic]
script_location = "alembic"
